--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "1.0.0",
   "private": true,
   "description": "A frontend boilerplate with React, MobX and Typescript",
-  "main": "index.js",
+  "main": "main.js",
+  "DEV":false,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --mode development --hot --progress --colors --port 3000 --open",
+    "estart": "electron .",
     "build": "webpack -p --progress --colors",
+    "package": "electron-packager ./ react-mobx-typescript-boilerplate --overwrite --asar --arch=x64 --prune=true --out=dist --ignore=\"(dist|public|src|package-lock.json|yarn.lock|.gitignore|README.md|config-overrides.js|node_modules)\"",
     "prettier": "prettier --write \"src/**/*.{ts,tsx,css}\""
   },
   "license": "MIT",
@@ -15,12 +18,14 @@
     "@babel/core": "^7.2.2",
     "@types/classnames": "^2.2.7",
     "@types/node": "^10.12.18",
-    "@types/react": "^16.7.20",
-    "@types/react-dom": "^16.0.11",
-    "@types/react-router": "^4.4.3",
+    "@types/react": "^16.8.8",
+    "@types/react-dom": "^16.8.2",
+    "@types/react-router": "^4.4.5",
     "@types/webpack": "^4.4.23",
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.0",
+    "electron": "^4.0.8",
+    "electron-packager": "^13.1.1",
     "file-loader": "^3.0.1",
     "html-loader": "^1.0.0-alpha.0",
     "html-webpack-plugin": "^3.2.0",
@@ -33,11 +38,11 @@
     "postcss-preset-env": "^6.5.0",
     "postcss-reporter": "^6.0.1",
     "postcss-url": "^8.0.0",
-    "prettier": "^1.16.0",
-    "react-hot-loader": "^4.6.3",
+    "prettier": "^1.16.4",
+    "react-hot-loader": "^4.8.0",
     "style-loader": "^0.23.1",
     "ts-loader": "^5.3.3",
-    "typescript": "^3.2.4",
+    "typescript": "^3.3.3333",
     "url-loader": "^1.1.2",
     "webpack": "^4.29.0",
     "webpack-cleanup-plugin": "^0.5.1",
@@ -49,9 +54,11 @@
     "classnames": "^2.2.6",
     "mobx": "^5.8.0",
     "mobx-react": "^5.4.3",
+    "mobx-react-devtools": "^6.1.1",
     "mobx-react-router": "^4.0.5",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "office-ui-fabric-react": "^6.154.0",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
     "react-router": "^4.3.1"
   }
 }
