--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "description": "A frontend boilerplate with React, MobX and Typescript",
-  "main": "main.js",
-  "DEV":false,
+  "main": "main.ts",
+  "DEV":true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --mode development --hot --progress --colors --port 3000 --open",
